# github-actions-tutorial

./: CMakeLists.txt  Calculator.h  SpeedMonitor.cpp  SpeedMonitor.h  main.cpp  test.cpp
.github/workflows/: build.yml  release.yml
